--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "genTypes": "npx supabase gen types typescript --project-id jcykxntxjhtmolockedf --schema public > src/types/supabase.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -16,6 +17,7 @@
     "next": "14.2.20",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "sweetalert2": "^11.15.2",
     "zustand": "^5.0.2"
   },
