--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "react-hook-form": "^7.54.2",
     "sweetalert2": "^11.15.2",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
-    "zustand": "^5.0.2"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
