--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
     "@tanstack/react-query": "^5.62.8",
@@ -20,10 +21,12 @@
     "next": "14.2.20",
     "react": "^18",
     "react-dom": "^18",
-    "recharts": "^2.15.0",
     "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.0",
     "sweetalert2": "^11.15.2",
-    "zustand": "^5.0.2"
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
