--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "recharts": "^2.15.0",
     "sweetalert2": "^11.15.2",
     "tailwind-merge": "^2.5.5",
